--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -62,6 +62,7 @@
                                     <h:panelGrid columns="1" styleClass="alignTop">
                                         <p:commandButton styleClass="linkButton" value="Before Stock Taking Report" action="pharmacy_report_before_stock_taking" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="After Stock Taking Report" action="pharmacy_report_after_stock_taking" ajax="false" ></p:commandButton>                            
+                                        <p:commandButton styleClass="linkButton" value="Stock Taking Report(New)" action="pharmacy_report_adjustment_bill_for_stock_taking" ajax="false" ></p:commandButton>                            
                                     </h:panelGrid>
                                 </p:panel>
 
