--- a/src/main/webapp/resources/income_report/credit_collection_inward_1.xhtml
+++ b/src/main/webapp/resources/income_report/credit_collection_inward_1.xhtml
@@ -14,22 +14,23 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <p:dataTable id="#{cc.id}"
-                     value="#{bookKeepingSummery.creditCompanyCollectionsInward}"
+                     value="#{bookKeepingSummery.creditCompanyCollectionsInwardBill}"
                      var="c"
-                     rendered="#{bookKeepingSummery.creditCompanyCollectionsInward.size()>0}">
+                     rendered="#{bookKeepingSummery.creditCompanyCollectionsInwardBill.size()>0}">
             <f:facet name="header">
                 <h:outputLabel value="Credit Company Collection  - Inward "/>    
             </f:facet>                               
-            <p:column style="width: 200px;" headerText="BHT">                  
-                <h:outputLabel value="#{c.patientEncounter.bhtNo}" />
+            <p:column style="width: 200px;" headerText="Id">                  
+                <h:outputLabel value="#{c.insId}" />
             </p:column>                                    
-            <p:column headerText="Patient Name" style="width: 40%;">                
+<!--            <p:column headerText="Patient Name" style="width: 40%;">                
                 <h:outputLabel value="#{c.patientEncounter.patient.person.name}" />
-            </p:column>  
+            </p:column>  -->
+            <p:column/>
             <p:column/>
             <p:column/>
             <p:column headerText="Total" style="width: 200px;text-align: right;">
-                <h:outputLabel value="#{c.netValue}">
+                <h:outputLabel value="#{c.netTotal}">
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
             </p:column> 
