--- a/src/main/webapp/hr/hr_report_staff_salary_component.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_component.xhtml
@@ -140,6 +140,13 @@
                                     <p:outputLabel value="#{ss.staffPaysheetComponent.bankBranch.institution.name}">
                                     </p:outputLabel>
                                 </p:column>
+                                <p:column headerText="Bank">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Bank"  />
+                                    </f:facet>
+                                    <p:outputLabel value="#{ss.staffPaysheetComponent.id}">
+                                    </p:outputLabel>
+                                </p:column>
                                 <p:column headerText="Component Value " style="text-align: right;">
                                     <f:facet name="header">
                                         <h:outputLabel value="Component Value"  />
