--- a/src/main/webapp/opd_search_bill_own.xhtml
+++ b/src/main/webapp/opd_search_bill_own.xhtml
@@ -163,6 +163,8 @@
 
                             </p:column>                         
                             <p:column headerText="Comments" >
+                                <h:outputLabel  value="#{bill.comments}" >
+                                </h:outputLabel>
                                 <h:outputLabel rendered="#{bill.refundedBill ne null}" value="#{bill.refundedBill.comments}" >
                                 </h:outputLabel>
                                 <h:outputLabel  rendered="#{bill.cancelledBill ne null}" value="#{bill.cancelledBill.comments}" >
