--- a/src/main/webapp/admin/bill_contact_numbers.xhtml
+++ b/src/main/webapp/admin/bill_contact_numbers.xhtml
@@ -14,7 +14,7 @@
             <h:form id="form"  >
                 <p:panel header="Contact numbers" >
                     <f:facet name="header">
-                        <h:panelGrid columns="2" >
+                        <h:panelGrid columns="2" id="panGrup1">
                             <h:outputLabel value="From Date"/>
                             <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" 
                                         navigator="false" pattern="dd MMMM yyyy hh mm ss a" >      
@@ -40,6 +40,22 @@
                                             var="npt" itemLabel="#{npt.name}"
                                             disabled="#{searchController.reportKeyWord.string ne '1'}"
                                             itemValue="#{npt}" size="30"  style="width: 40px;"></p:autoComplete>
+                            <p:outputLabel value="Age Range" />
+                            <p:selectOneRadio id="console2" value="#{searchController.reportKeyWord.string1}" >
+                                <f:selectItem itemLabel="All" itemValue="0" />
+                                <f:selectItem itemLabel="Less Than" itemValue="1" />
+                                <f:selectItem itemLabel="Grater Than" itemValue="2" />
+                                <f:selectItem itemLabel="Between" itemValue="3" />
+                                <f:ajax event="change" execute="@this" render="panGrup1" />
+                            </p:selectOneRadio>
+                            <h:outputLabel value="From Age"/>
+                            <p:inputText value="#{searchController.reportKeyWord.from}" 
+                                         disabled="#{searchController.reportKeyWord.string1 eq '0' 
+                                                     or searchController.reportKeyWord.string1 eq '2'}" />
+                            <h:outputLabel value="To Age"/>
+                            <p:inputText value="#{searchController.reportKeyWord.to}"
+                                         disabled="#{searchController.reportKeyWord.string1 eq '0' 
+                                                     or searchController.reportKeyWord.string1 eq '1'}"/>
                             <p:commandButton id="btnSearch" ajax="false" value="Search" 
                                              action="#{searchController.createAllBillContacts()}" />
                             <p:outputLabel />
