--- a/src/main/webapp/resources/channel/channelReciptPos_coop.xhtml
+++ b/src/main/webapp/resources/channel/channelReciptPos_coop.xhtml
@@ -310,7 +310,7 @@
                             </td>
                             <td>
                                 <h:outputLabel value="#{cc.attrs.bill.createdAt}">
-                                    <f:convertDateTime pattern="dd MM yy hh:mm a" ></f:convertDateTime>
+                                    <f:convertDateTime pattern="dd MM yy hh:mm:ss a" ></f:convertDateTime>
                                 </h:outputLabel>
                             </td>
                         </tr>
